--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,10 @@
+spring:
+  datasource:
+    url: jdbc:postgresql://127.0.0.1:5432/tvseries?stringType=unspecified&ApplicationName=tutorial
+    username: pgdbo
+    password: sql
 logging:
   file: target/app.log
   level:
     ROOT: WARN
-    com.lx3: TRACE #com.lx包的日志追踪级别
+    com.lx3: TRACE
