--- a/pom.xml
+++ b/pom.xml
@@ -63,7 +63,12 @@
 			<version>1.3.2</version>
 		</dependency>
 
-
+		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.13</version>
+		</dependency>
 
 	</dependencies>
 
