--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://127.0.0.1/tvseries
+    url: jdbc:mysql://127.0.0.1/tvseries?useUnicode=true&serverTimezone=UTC&characterEncoding=utf-8&allowMultiQueries=true
     username: admin
     password: admin
 mybatis.configuration.mapUnderscoreToCamelCase: true
